# decimator

./: .env  README.md  docker-compose.yml  install_dependencies.bat  start_backend.bat  start_frontend.bat
services/decimator_api/: .dockerignore  .env.common  .env.dev  .gitignore  Dockerfile  d2.db  pyproject.toml  requirements.txt  run_service.py
services/decimator_api/app/: config.py  main.py
services/decimator_api/app/api/: factory.py  router.py
services/decimator_api/app/api/controllers/: documents.py  folders.py  orgs.py  users.py
services/decimator_api/app/api/db/: mongo_utils.py  mongodb.py
services/decimator_api/app/api/helpers/: auth.py
services/decimator_api/app/api/models/: auth.py  dbmodel.py  document.py  folder.py  folder_group.py  meta.py  org.py  types.py  user.py
services/decimator_api/app/api/services/: base.py  documents.py  folders.py  orgs.py  users.py
services/decimator_api/utils/: data_migrator.py
services/frontend/: .env  .eslintcache  package-lock.json  package.json
services/frontend/src/: App.tsx  index.css  index.tsx
services/frontend/src/components/: Home.tsx
services/frontend/src/components/admin/: AdminPanel.tsx
services/frontend/src/components/auth/: PrivateRoute.tsx  SignIn.tsx  SignUp.tsx
services/frontend/src/components/bars/: DrawerSideBar.tsx  MainAppBar.tsx
services/frontend/src/components/common/: Copyright.tsx
services/frontend/src/components/org/: OrgAlbum.tsx
services/frontend/src/types/: document.ts  folder.ts  org.tsx  user.ts
services/frontend/src/utils/: auth.ts  common.ts
(+20 files in other folders)
