[tool.poetry]
name = "decimator_web"
version = "0.0.1"
description = ""
authors = ["Philipp Bondarev <dogrtt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
databases = "^0.4.1"
motor = "^2.3.0"
python-dotenv = "^0.15.0"
uvicorn = "^0.13.3"
requests = "^2.25.1"
aiofiles = "^0.6.0"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
